add get link cache

--- a/config.json
+++ b/config.json
@@ -3,5 +3,7 @@
     "appKey": "123",
     "appSecret": "123",
     "callbackUrl": "http://123.123/authCallback",
-    "accessToken": ""
+    "accessToken": "",
+    "linkCache"    : true,
+    "linkCacheTime": 3600
 }
