--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
     "callbackUrl": "http://123.123/authCallback",
     "accessToken": "",
     "linkCache"    : true,
-    "linkCacheTime": 3600
+    "linkCacheTime": 3600,
+    "defaultFolder": -1
 }
